# panache

./: .gitignore  CHANGES.md  CLAUDE.md  LICENSE  NEWS.md  README.md  example_parameter_config.json  example_zone_config.json  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: api.rst  conf.py  index.md  index.rst  news.md  vignette.md  vignette_masks.md  vignette_workflow.md
src/panache/: __init__.py  cli.py  config.py  io.py  plume_algorithm.py  runner.py  utils.py
testing/: test_cli.py  test_config_extra.py  test_io_extra.py  test_pipeline.py  test_plume_algorithm.py  test_plume_functions.py  test_plume_methods.py  test_runner_internals.py  test_searching_strategy_presets.py  test_utils_extra.py
testing/smoke_tests/: smoke_test_module.py
